# Feb-2024-PythonHack2

./: .breakpoints  .env  .gitignore  .replit  README.md  db.sqlite3  httpd.conf  manage.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  readme.md  replit.nix  requirements.txt  tailwind.config.js  tester.py  urls.py
.github/workflows/: django.yml  xdjango.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  (+17 more)
blogcast/: asgi.py  settings.py  urls.py  wsgi.py
django_project/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
env/: pyvenv.cfg
myblog/: admin.py  models.py
profiles/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
project/: settings.py  urls.py
src/: db.sqlite3  manage.py
static/: styles.css
staticweather/: weather.css
templates/: _base.html  about.html  basic.html  category.html  contact.html  contact_us.html  footer.html  forgot_password.html  handleBlog.html  index.html  login.html  navbar.html  post_card.html  post_create_update.html  post_delete.html  post_detail.html  post_details.html  post_edit.html  post_list.html  profile_manager.html  register.html  search.html  signup.html  weather.html  weather_data.html  weather_error.html  weather_widget.html
templatesweather/: weather.html
weather/: __init__.py  admin.py  models.py  urls.py  utils.py  views.py
weatherapp/: apps.py  urls.py  views.py
(+73 files in other folders)
